bug 146108, popup menu position wrong after opening tabs. patch=robin,r=blizzard,sr=bryner,a=asa