widget/src/gtk/nsWindow.cpp
@@ -2646,6 +2646,7 @@ NS_IMETHODIMP nsWindow::ConstrainPosition(PRBool aAllowSlop, PRInt32 *aX, PRInt3
 
 NS_IMETHODIMP nsWindow::Move(PRInt32 aX, PRInt32 aY)
 {
+  InvalidateWindowPos();	
   // check if we are at right place already
   if((aX == mBounds.x) && (aY == mBounds.y) && !mIsToplevel) {
      return NS_OK;
@@ -2676,10 +2677,8 @@ NS_IMETHODIMP nsWindow::Move(PRInt32 aX, PRInt32 aY)
       oldrect.y = aY;
       mParent->WidgetToScreen(oldrect, newrect);
       gtk_widget_set_uposition(mShell, newrect.x, newrect.y);
-      InvalidateWindowPos();
     } else {
       gtk_widget_set_uposition(mShell, aX, aY);
-      InvalidateWindowPos();
     }
   }
   else if (mSuperWin) {
